fixed overflow-y

--- a/pushbox/pb.css
+++ b/pushbox/pb.css
@@ -6,6 +6,7 @@
 	top: 0;
 	left: 0;
 	background-color: black;
+	
 }
 
 .pb-w {
@@ -23,7 +24,7 @@
 	width:100%;
 	height: 100%;
 	display: inline-block;
-	overflow-y: scroll;
+	overflow-y: auto;
 
 }
 
@@ -38,4 +39,5 @@ a.pb-btn-close {
 	right: 5px;
 	background-position: center;
 	background-color: white;
+	
 }
